--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "ace-builds": "^1.9.6",
     "react": "^18.2.0",
+    "react-ace": "^10.1.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-split-pane": "^0.1.92",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
